tests/marouter/errors/no_output_dir/routes.marouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-01-20 14:28:51 by Eclipse SUMO marouter Version v1_11_0+1326-900074debd9
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/marouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <additional-files value="input_taz.taz.xml"/>
        <route-files value="input_trips.trips.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
        <netload-output value="blub/aggregated.xml"/>
        <write-license value="true"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <xml-validation.routes value="never"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd"/>
